--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@fontsource-variable/jetbrains-mono": "^5.1.0",
+    "@fontsource-variable/outfit": "^5.1.0",
     "@mantine/core": "7.13.0",
     "@mantine/hooks": "7.13.0",
     "@remix-run/node": "^2.9.2",
